deployment-flaresolverr.yaml
## Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
spec:
  selector:
    matchLabels:
      app: flaresolverr
  replicas: 1
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191
          name: http-8191
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
