deployment-metadata-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-server
spec:
  selector:
    matchLabels:
      app: metadata-server
  template:
    metadata:
      labels:
        app: metadata-server
    spec:
      containers:
      - name: metadata-server
        image: k8s.gcr.io/volume-nfs:latest
        ports:
        - name: nfs
          containerPort: 2049
        - name: mountd
          containerPort: 20048
        - name: rpcbind
          containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
        - name: storage
          mountPath: /exports
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: metadata-server
