deployment-riven-frontend.yaml
## Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: riven-frontend
  name: riven-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: riven-frontend
  template:
    metadata:
      labels:
        app: riven-frontend
    spec:
      restartPolicy: Always
      containers:
        - name: riven-frontend
          image: spoked/riven-frontend:latest
          ports:
            - name: frontend-http
              containerPort: 3000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
          readinessProbe:
            httpGet:
              path: /
              port: frontend-http
          livenessProbe:
            httpGet:
              path: /
              port: frontend-http
              failureThreshold: 5
