statefulset-plex-streaming.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-streaming
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-streaming
  serviceName: "plex-streaming"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex-streaming
    spec:
      containers:
      - name: plex
        image: docker.io/plexinc/pms-docker:plexpass
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: http-32400
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: remotemedia
          mountPath: "/media/remote"
        - name: metatdata
          mountPath: "/media/metatdata"
        - name: transcode
          mountPath: "/transcode"
        resources:
          requests:
            memory: "2Gi"
            cpu: "2000m"
          limits:
            memory: "4Gi"
            cpu: "6000m"
            gpu.intel.com/i915: 1
        readinessProbe:                # Check that the http server is responding to ensure the container is up
          tcpSocket:
            port: 32400
        livelinessProbe:               # Check that the http server is responding to ensure the container is up
          tcpSocket:
            port: 32400
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 5
      volumes:
      - name: transcode
        emptyDir: 
          sizeLimit: 128Gi
      - name: metatdata
        persistentVolumeClaim:
          claimName: metatdata
      - name: remotemedia
        persistentVolumeClaim:
          claimName: remotemedia
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 32Gi
