statefulset-prowlarr.yaml
## StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  serviceName: "prowlarr"
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - name: prowlarr-http
          containerPort: 9696
        volumeMounts:
        - name: config
          mountPath: "/config"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:                # Check that the http server is responding to ensure the container is up
          httpGet:
            path: /
            port: prowlarr-http
        livelinessProbe:               # Check that the http server is responding to ensure the container is up
          httpGet:
            path: /
            port: prowlarr-http
            failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
