statefulset-riven-db.yaml
## PostgreSQL StatefulSet for Riven
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: riven-db
  annotations:
    polaris.fairwinds.com/runAsRootAllowed-exempt: true  # root is required by this container
  name: riven-db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: riven-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: riven-db
    spec:
      containers:
        - name: riven-db
          image: postgres:17.0
          imagPullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - pg_isready
                - "-U"
                - postgres
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "400m"
          securityContext:
            allowPrivilegeEscalation: false
            runasNonRoot: true
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
