statefulset-riven.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: riven
  name: riven
spec:
  selector:
    matchLabels:
      app: riven
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: riven
    spec:
      containers:
        - name: riven
          image: spoked/riven:latest
          readinessProbe:
            tcpSocket:
              port: backend-http
            #httpGet:
            #  path: /
            #  port: backend-http
            periodSeconds: 30
            timeoutSeconds: 10
          livenessProbe:
            tcpSocket:
              port: backend-http
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
          securityContext:
            allowPrivilegeEscalation: false
            runasNonRoot: true
          ports:
            - name: backend-http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /riven/data
            - name: remote
              mountPath: /media/remote
            - name: local
              mountPath: /media/local
      restartPolicy: Always
      volumes:
        - name: remote
          persistentVolumeClaim:
            claimName: remote-media
        - name: local
          nfs:
            path: /mnt/pool0/media
            server: truenas.farhoodliquor.dmz
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
