service-flaresolverr.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
   name: flaresolverr
   labels:
     app: flaresolverr
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 8191
  selector:
    app: flaresolverr
