service-metadata-server.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
   name: metadata-server
   labels:
     app: metadata-server
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 111
    targetPort: 111
  - port: 2049
    targetPort: 2049
  - port: 20048
    targetPort: 20048
  selector:
    app: metadata-server
