service-plex-streaming.yaml
apiVersion: v1
kind: Service
metadata:
   name: plex-streaming
   labels:
     app.kubernetes.io/name: plex-streaming
   annotations:
     metallb.universe.tf/loadBalancerIPs: 65.43.40.109
spec:
  selector:
    app.kubernetes.io/name: plex-streaming
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 443
    targetPort: 32400
    name: http-32400
