service-prowlarr.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
   name: prowlarr
   namespace: mediaserver
   labels:
     app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  #clusterIP: None
  ports:
  - port: 9696
  selector:
    app.kubernetes.io/name: prowlarr
