service-riven-db.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: riven-db
  name: riven-db
spec:
  ports:
    - name: "riven-db"
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: riven-db
