service-riven-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: riven-frontend
  name: riven-frontend
spec:
  ports:
    - name: "riven-frontend"
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: riven-frontend
