service-riven.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: riven
  name: riven
  namespace: mediaserver
spec:
  ports:
    - name: "riven"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: riven
