services-riven.yaml
## Services
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: riven-db
  name: riven-db
  namespace: mediaserver
spec:
  ports:
    - name: "riven-db"
      port: 5432
      targetPort: 5432
  selector:
    app: riven-db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: riven
  name: riven
  namespace: mediaserver
spec:
  ports:
    - name: "riven"
      port: 8080
      targetPort: 8080
  selector:
    app: riven
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: riven-frontend
  name: riven-frontend
  namespace: mediaserver
spec:
  ports:
    - name: "riven-frontend"
      port: 3000
      targetPort: 3000
  selector:
    app: riven-frontend
