ingress-prowlarr.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: traefik-internal
  rules:
  - host: prowlarr.streaming.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  prowlarr
            port:
              number: 9696
