ingress-riven-frontend.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: riven-frontend
spec:
  ingressClassName: traefik-internal
  rules:
    - host: riven.streaming.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: riven-frontend
                port:
                  number: 3000
